[package]
name = "huex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
image = { version = "0.24.9", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "qoi", "tiff", "webp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
